--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,3 +1,13 @@
+@mixin altoAncho($height, $width) {
+    height: $height;
+    width: $width;
+    
+}
+
+
+
+
+/* mixin portada index */
 
 @mixin flex ($dis,$flex-direction, $flex-wrap,$align-content , $justify, $align) { 
     
@@ -8,10 +18,8 @@
     justify-content: $justify;
     align-items: $align;
 }
+/*  fin mixin portada index  */
 
-.contenedor__flex {
-    @include flex (flex,column,nowrap,center,center,center)
-    
-}
+
 
 
