--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
-$color-primary: rgb(245, 245, 21); 
+$color-primary: rgb(246, 246, 118);
 $color-secondary:rgb(251, 251, 250);
 
 $palette: (
-    "primary": rgb(245, 245, 21), 
-    "secondary": rgb(251, 251, 250)
+    "primary":  rgb(246, 246, 118),
+    "secondary": rgb(251, 251, 250),
 );
