--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,7 +1,10 @@
 @import "variables";
-@import "normalize";
 @import "mixins";
 @import "extend";
+@import "nosotros";
+@import "productos";
+@import "servicios";
+@import "contacto";
 
 * {
     margin: 0;
@@ -18,16 +21,18 @@ header {
     background-color: map-get($map:$palette , $key: "secondary" );
 }
 
+
 header h1 {
-    font-family: Times, 'Times New Roman', serif;
+    font-family: 'Nanum Pen Script', cursive;
     color: rgb(238, 238, 27);
-    text-align: center;
+    font-size: 70px;
+    padding-top: 0%;
 }
 
 header h2 {
     font-family: 'Times New Roman', Times, serif;
     color: rgb(115, 115, 115);
-    text-align: center;
+    margin-bottom: 0.2rem;
 }
 
 .logo__flex {
@@ -43,43 +48,22 @@ header h2 {
     font-size: 200%;
 }
 
-header img {
-    width: 100px;
-    height: 70px;
+header img  {
+    @include altoAncho(70px,100px);
     margin: 0 0 0 20px;
 }
-
-.nav-bar {
-    text-align: right;
-    font-size: large;
-    word-spacing: 0.15cm;
-    margin: 0 20px 0 0;
-
-}
-
-.nav-bar {
-    display: flex;
-    flex-wrap: nowrap;
-    align-content: stretch;
-    flex-direction: row-reverse;
-    justify-content: flex-start;
-    align-items: flex-start;
-}
-
-.nav-bar {
-    display: inline;
-    font-size: small;
-}
-
 /* fin header canario */
 
 /* inicio portada index */
 .carousel-inner {
     height: 700px;
 }
-
-
-
+/* mixin portada */
+.contenedor__flex {
+    @include flex (flex,column,nowrap,center,center,center)
+    
+}
+/* fin mixin portada */
 .tituloportada {
     text-align: center;
     color: grey;
@@ -112,77 +96,23 @@ header img {
     }
 }
 
-main .portadaText p {
+main .portadaText {
     text-align: center;
     background-color: rgb(246, 246, 118);
     font-size: medium;
     padding-bottom: 200px;
     padding-top: 30px;
-    height: 0%
+    height: 0%;
+         p{
+            margin: 2px;
+            padding: 20px; 
+         }
+
 }
 
 /* fin texto de portada index */
-/* inicio de footer */
-footer {
-    color: white;
-    line-height: 15px;
-    background-image: url("../assets/imag/gray.jpg");
-    background-color: grey;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-
-    ul {
-        li {
-            font-size: 1.5rem;
-
-            a {
-                color: white;
-            }
-        }
-    }
-
-    .bi {
-        font-size: 1.2rem;
-
-        p {
-            font-size: 1.5rem;
-        }
-    }
-
-
-}
-
-.footer__flex {
-    display: flex;
-    justify-content: space-around;
-    font-size: 0.8rem;
-
-}
-
-.footer__creditos {
-    font-size: 0.8rem;
-    text-align: center;
-}
-
-/* fin de footer */
-
-/*inicio main de nosotros */
-.gridPadre {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 50px 50px;
-    grid-template-areas:
-        "titulo titulo"
-        "texto imagen";
-    justify-items: left;
-}
-
-
+/* animacion titulos */
 .animacion_titulos {
-    grid-area: titulo;
     text-align: left;
     color: grey;
     padding: 1cm;
@@ -214,209 +144,144 @@ footer {
         color: gray;
     }
 }
-
-.text_nosotros {
-    grid-area: texto;
-    margin: 1cm;
-    height: 1cm;
-    padding-bottom: 200px;
-    padding-top: 10px;
-}
-
-.gridPadre img {
-    grid-area: imagen;
-    width: 600px;
-    padding-bottom: 400px;
-}
-
-/* fin main de nosotros */
-/* inicio productos*/
-h4{
+/* fin animacion titulos */
+/* inicio de footer */
+footer {
     color: white;
-    text-align: start;
-    padding: 0.5cm;
-    
-}
-.alimentos_flex {
-    display: flex;
-    align-content: flex-start;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: row;
-    img:hover{
-        transform: scale(2, 2);
-
-    }
- 
-}
-/* extend */
-.accesorios_flex{
-    @extend .alimentos_flex
+    line-height: 15px;
+    background-image: url("../assets/imag/gray.jpg");
+    background-color: grey;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
    
-}
 
-/* extend */
+    ul {
+        li {
+            font-size: 1.5rem;
+            text-align: center;
 
-.cuchas_flex{
-    display: flex;
-    align-content: flex-start;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: row;
-    padding-bottom: 300px;
-    img:hover{
-        transform: scale(2, 2);
-
+            a {
+                color: white;
+            }
+        }
     }
-}
 
-/* fin productos */
+    .bi {
+        font-size: 1.2rem;
+        text-align: center;
 
-/* inicio  servicios */
-.gridpadre_servicios {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(1, 1fr);
-    gap: 20px;
-    justify-items: stretch;
-    align-content: space-between;
-    justify-content: space-between;
-    align-items: stretch;
-    
-}
+        p {
+            font-size: 1.5rem;
+            
+        }
+    }
 
-.peluqueria {
-    grid-area:1 / 1 / 2 / 2;
-    padding: 2cm;
-    border: 1cm;
 
 }
 
-.imgpeluqueria {
-    grid-area: 1 / 2 / 2 / 3; 
-    border: 1cm;
-    padding: 2cm;
-    
-}
-
-.veterinaria {
-    grid-area: 2 / 1 / 3 / 2;
-    padding: 2cm;
-    padding-bottom: 300px;
-    padding-top: 60px;
-
-}
-
-.imgveterinaria {
-    grid-area: 2 / 2 / 3 / 3;
-    padding-bottom: 300px;
-    padding-top: 60px;
-    padding: 2cm;
-    
-}
-
-/* fin servicios */
-
-
-/* inicio contacto */
-.fondocontacto {
-    background-image: url(../assets/imag/contacto.jpg);
-    height: 800px;
-}
-
-.form-group {
+.footer__flex {
     display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-content: flex-end;
-    align-items: flex-end;
     justify-content: space-around;
-    margin: 5cm;
-    height: 5cm;
-    font-size: 1.2rem;
-    color: white;
-    padding: 2cm;
-    padding-bottom: 650px;
+    font-size: 0.8rem;
 }
-/* fin contacto */
 
-/* inicio vista mobile index_nosotros_servicios */
+.footer__creditos {
+    font-size: 0.8rem;
+    text-align: center;
+}
+
+/* fin de footer */
+/* inicio vista mobile index */
 @media only screen and (max-width: 420px) {
 
     /* inicio @media index */
     body {
-        background-color: rgb(245, 245, 21);
+        background-color: map-get($map: $palette, $key:"primary" );
         height: 1000px;
 
     }
 
+    header h1 {
+        font-family: 'Nanum Pen Script', cursive;
+        color: rgb(238, 238, 27);
+        font-size: 40px;
+        padding-top: 0%;
+    }
+    
+    header h2 {
+        font-family: 'Times New Roman', Times, serif;
+        color: rgb(115, 115, 115);
+        margin-bottom: 0.2rem;
+    }
+
     .carousel-inner {
         height: 300px;
+        width:500px ;
     }
+
+    .contenedor__flex {
+        @include flex (flex,column,nowrap,center,center,center)
+        
+    }
+    /* fin mixin portada */
+    .tituloportada {
+        text-align: center;
+        color: grey;
+        font-size: 30px;
+         /* nombre */
+    animation-name: efecto;
+    /* veces que se ejecuta */
+    animation-iteration-count: infinite;
+    /* duracion */
+    animation-duration: 4s;
+    /* tiempo que demora hasta que carga */
+    animation-delay: 1s;
+}
+
+@keyframes efecto {
+    0% {
+        color: gray;
+    }
+
+    50% {
+        color: white;
+    }
+
+    75% {
+        color: black;
+    }
+
+    100% {
+        color: gray;
+    }
+}
 
     main .portadaText p {
         text-align: center;
         background-color: rgb(246, 246, 118);
         font-size: medium;
-        padding-bottom: 50px;
-        padding-top: 70px;
+        padding-bottom: 30px;
+        padding-top: 40px;
         height: 0%
     }
 
     /* fin de index */
-    /* inicio  @media nosotros */
-    .gridPadre {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 120px;
-        grid-template-areas:
-            "titulo"
-            "imagen"
-            "texto";
-        justify-items: center;
-
-    }
-
-    h2 {
-        grid-area: titulo;
-        text-align: center;
-        padding-bottom: 100px;
-        height: 1px;
-    }
-
-    .text_nosotros {
-        grid-area: texto;
-        margin: 1cm;
-        height: 1cm;
-        padding-bottom: 600px;
-        padding-top: 10px;
-        text-align: center;
-    }
-
-    .gridPadre img {
-        grid-area: imagen;
-        width: 350px;
-        padding-bottom: 1px;
-    }
-
-    /* fin @media nosotros */
-    /* inicio @media servicios */
-    .gradiente {
-        background-image: linear-gradient(rgb(32, 32, 15), rgb(214, 219, 54));
-    }
-
-    /* fin @media servicios */
     /* inicio @media footer */
     footer {
         color: white;
-        line-height: 6px;
+        line-height: 4px;
         background-image: url("../assets/imag/gray.jpg");
         background-color: grey;
         background-repeat: no-repeat;
         background-size: cover;
         bottom: 0;
         width: 100%;
-        height: 0.5s;
+        font-size: 2px;
+        position: relative;
+
     }
 
     .bi-whatsapp:before {
@@ -468,17 +333,17 @@ h4{
 
     .footer__flex {
         display: flex;
-        justify-content: space-around;
-        font-size: 0.6rem;
-
+    justify-content: space-evenly;
+    font-size: 0.3rem;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: stretch;
     }
 
     .footer__creditos {
-        font-size: 0.6rem;
+        font-size: 0.3rem;
         text-align: center;
     }
 
     /* fin @media footer */
 }
-
-/* fin vista mobile index nosotros y servicios*/
