--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -12,6 +12,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Canario Pet Shop-Nosotros</title>
 </head>
@@ -43,14 +46,14 @@
         </div>
     </nav>
     <header class="container-fluid">
-        <h1 class="text-center text-uppercase mt-4">Canario Pet Shop</h1>
+        <h1 class="text-center mt-4">Canario Pet Shop</h1>
         <h2 class="text-center">Tienda para mascotas</h2>
     </header>
     <!-- Fin de header -->
     <!-- Inicio de main-->
     <main class="gridPadre">
         <div class="animacion_titulos">
-            <h2>Nosotros</h2>
+            <h2 class="tit">Nosotros</h2>
         </div>
         <div class="text_nosotros">
             <p>Somos el Pet-shop más completo de la Argentina con 5 años de experiencia;
