--- a/views/servicios.html
+++ b/views/servicios.html
@@ -12,6 +12,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Canario Pet Shop-Servicios</title>
 
@@ -43,7 +46,7 @@
         </div>
     </nav>
     <header class="container-fluid">
-        <h1 class="text-center text-uppercase mt-4">Canario Pet Shop</h1>
+        <h1 class="text-center mt-4">Canario Pet Shop</h1>
         <h2 class="text-center">Tienda para mascotas</h2>
     </header>
     <!-- Fin de header -->
