--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -1,44 +1,44 @@
-h4{
-    color: white;
-    text-align: start;
-    padding: 0.5cm;
-    
+.tit_alimentos {
+    color: black;
+    padding: 50px;
+    border: 120px;
+    padding-bottom: 1px;
+
+
+}
+
+.tit_accesorios {
+    @extend .tit_alimentos
+}
+
+.tit_cuchas {
+    padding: 50px;
+    border: 120px;
+    padding-bottom: 1px;
 }
 
 .alimentos_flex {
-    display: flex;
-    align-content: flex-start;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: row;
-    img:hover{
-        transform: scale(2, 2);
+    @include alimentosflex(flex, flex-start, space-around, center, row);
 
-    }
- 
-}
- 
-.accesorios_flex{
-    display: flex;
-    align-content: flex-start;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: row;
-    img:hover{
+    img:hover {
         transform: scale(2, 2);
-
     }
- 
+
 }
 
-.cuchas_flex{
+.accesorios_flex {
+    @extend .alimentos_flex
+}
+
+.cuchas_flex {
     display: flex;
     align-content: flex-start;
     justify-content: space-around;
     align-items: center;
     flex-direction: row;
-    padding-bottom: 300px;
-    img:hover{
+    padding-bottom: 200px;
+
+    img:hover {
         transform: scale(2, 2);
 
     }
