--- a/views/contacto.html
+++ b/views/contacto.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=C, initial-scale=1.0">
     <meta name="keywords" content="petshop cordoba,mascotas, alimentos para mascotas">
-    <meta name="description" content="Te esperamos en Av. La Cordillera 3946 o comunicate a nuestro wsp +5493513845741">
+    <meta name="description" content="Te esperamos en Av. La Cordillera 3946 o comunicate a nuestro wsp +5493513845741.">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="shortcut icon" href="../assets/imag/logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -62,12 +62,15 @@
                         <label for="exampleFormControlInput1" class="form-label">Nombre</label>
                         <input type="nombre" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
                         <label for="exampleFormControlInput1" class="form-label">Apellido</label>
-                        <input type="apellido" class="form-control" id="exampleFormControlInput1" placeholder="Apellido">
+                        <input type="e-mail" class="form-control" id="exampleFormControlInput1" placeholder="Apellido">
+                        <label for="exampleFormControlInput1" class="form-label">E-mail</label>
+                        <input type="e-mail" class="form-control" id="exampleFormControlInput1" placeholder="E-mail">
+                    
                     </div>
                     <div class="mb-4 col-md-6">
                         <label for="exampleFormControlTextarea1" class="form-label">Dejanos tu mensaje</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
-                        <input type="submit" value="Enviar">
+                        <button type="button" class="btn btn-dark">Enviar</button>
                     </div>
                 </div>
             </form>
@@ -88,20 +91,13 @@
                 <h4>Redes Sociales</h4>
                 <ul class="mt-4 list unstyled">
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
+                        <p><i class="fab fa-facebook-f"></i></p>
                     </li>
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-instagram"></i>
-                        </a>
+                        <p><i class="fab fa-instagram"></i></p>
                     </li>
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-twitter"></i>
-
-                        </a>
+                        <p><i class="fab fa-twitter"></i></p>
                     </li>
                 </ul>
             </div>
@@ -109,27 +105,18 @@
                 <h4>Medios de pago</h4>
                 <ul class="mt-4 list unstyled">
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-cc-visa"></i>
-                        </a>
+                        <p><i class="fab fa-cc-visa"></i></p>
                     </li>
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-cc-mastercard"></i>
-                        </a>
-
+                        <p><i class="fab fa-cc-mastercard"></i></p>
                     </li>
 
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-cc-amex"></i>
-                        </a>
+                        <p><i class="fab fa-cc-amex"></i></p>
                     </li>
 
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-cc-paypal"></i>
-                        </a>
+                        <p><i class="fab fa-cc-paypal"></i></p>
                     </li>
                 </ul>
             </div>
