--- a/views/productos.html
+++ b/views/productos.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="petshop cordoba,mascotas, alimentos para mascotas">
-    <meta name="description" content="Venta de accesorios, cuchas y alimentos par atus mascotas">
+    <meta name="description" content="Venta de accesorios, cuchas y alimentos para tus mascotas.">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="shortcut icon" href="../assets/imag/logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -54,7 +54,9 @@
             <h2>Productos</h2>
         </div>
         <!-- Incio imagenes de productos -->
-        <h4>Alimentos</h4>
+        <div class="tit_alimentos">
+        <h3>Alimentos</h3>
+    </div>
         <div class="alimentos_flex">
             <div class="card" style="width: 18rem;">
                 <img src="../assets/imag/catchow.jpg" class="card-img-top" alt="catchow">
@@ -62,7 +64,8 @@
                     <h5 class="card-title">Cat Chow Defense Plus</h5>
                     <p class="card-text">Alimento Cat Chow Defense Plus para gato adulto sabor pescado en bolsa de 15
                         kg.</p>
-                    <a href="" class="btn btn-primary">Comprar</a>
+                    <button type="button" class="btn btn-secondary">Comprar</button>
+
                 </div>
             </div>
 
@@ -72,7 +75,7 @@
                     <h5 class="card-title">Dogui Recetas Caseras</h5>
                     <p class="card-text">Alimento Dogui Recetas Caseras para perro adulto sabor carne y vegetales en
                         bolsa de 21 kg</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <button type="button" class="btn btn-secondary">Comprar</button>
                 </div>
             </div>
 
@@ -81,67 +84,71 @@
                 <div class="card-body">
                     <h5 class="card-title">Excellent Gato Adulto</h5>
                     <p class="card-text">Purina Excellent Gato Adulto Skin Care 7.5 Kg</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <button type="button" class="btn btn-secondary">Comprar</button>
                 </div>
             </div>
         </div>
-        <h4>Accesorios</h4>
+        <div class="tit_accesorios">
+        <h3>Accesorios</h3>
+    </div>
         <div class="accesorios_flex">
-        <div class="card" style="width: 18rem;">
-            <img src="../assets/imag/comederos.jpg" class="card-img-top" alt="comederos">
-            <div class="card-body">
-                <h5 class="card-title">Comedero</h5>
-                <p class="card-text">Comedero De Acero Inoxidable 21 Cm Base Perro Antideslizante</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="card" style="width: 18rem;">
+                <img src="../assets/imag/comederos.jpg" class="card-img-top" alt="comederos">
+                <div class="card-body">
+                    <h5 class="card-title">Comedero</h5>
+                    <p class="card-text">Comedero De Acero Inoxidable 21 Cm Base Perro Antideslizante</p>
+                    <button type="button" class="btn btn-secondary">Comprar</button>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../assets/imag/transportador.png" class="card-img-top" alt="transportador">
+                <div class="card-body">
+                    <h5 class="card-title">Transportador para mascotas</h5>
+                    <p class="card-text">Bolso Transportador Perro Gato Varios Diseños S 23x16x36</p>
+                    <button type="button" class="btn btn-secondary">Comprar</button>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../assets/imag/collar.jpg" class="card-img-top" alt="collar">
+                <div class="card-body">
+                    <h5 class="card-title">Collar</h5>
+                    <p class="card-text">Collar Perro Chico/mediano Con Panuelo Bandana 40cm</p>
+                    <button type="button" class="btn btn-secondary">Comprar</button>
+                </div>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
-            <img src="../assets/imag/transportador.png" class="card-img-top" alt="transportador">
-            <div class="card-body">
-                <h5 class="card-title">Transportador para mascotas</h5>
-                <p class="card-text">Bolso Transportador Perro Gato Varios Diseños S 23x16x36</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="../assets/imag/collar.jpg" class="card-img-top" alt="collar">
-            <div class="card-body">
-                <h5 class="card-title">Collar</h5>
-                <p class="card-text">Collar Perro Chico/mediano Con Panuelo Bandana 40cm</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
-            </div>
-        </div>
+        <div class="tit_cuchas">
+        <h3>Cuchas</h3>
     </div>
-        <h4>Cuchas</h4>
         <div class="cuchas_flex">
-        <div class="card" style="width: 18rem;">
-            <img src="../assets/imag/cucha1.jpg" class="card-img-top" alt="cucharayada">
-            <div class="card-body">
-                <h5 class="card-title">Cucha para mascota Rayas Negras</h5>
-                <p class="card-text"> Posee acabado antimanchas y un almohadón doble faz para adaptarse a diferentes
-                    temperaturas.</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="card" style="width: 18rem;">
+                <img src="../assets/imag/cucha1.jpg" class="card-img-top" alt="cucharayada">
+                <div class="card-body">
+                    <h5 class="card-title">Cucha para mascota Rayas Negras</h5>
+                    <p class="card-text"> Posee acabado antimanchas y un almohadón doble faz para adaptarse a diferentes
+                        temperaturas.</p>
+                    <button type="button" class="btn btn-secondary">Comprar</button>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../assets/imag/cucha3.jpg" class="card-img-top" alt="cuchademadera">
+                <div class="card-body">
+                    <h5 class="card-title">Cucha Safari</h5>
+                    <p class="card-text"> Están construidas con estructura de madera dura, 2x1 pulgadas, atornillada en
+                        todas sus uniones, revestida en su totalidad en machimbre de primera calidad.</p>
+                    <button type="button" class="btn btn-secondary">Comprar</button>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="../assets/imag/cucha4.jpg" class="card-img-top" alt="cuchabubble">
+                <div class="card-body">
+                    <h5 class="card-title">Cucha Bubble</h5>
+                    <p class="card-text"> Esfera realizada con polietileno de alta densidad, resistente al impacto y con
+                        protección UV que permite que los colores permanezcan inalterables con el paso del tiempo</p>
+                    <button type="button" class="btn btn-secondary">Comprar</button>
+                </div>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
-            <img src="../assets/imag/cucha3.jpg" class="card-img-top" alt="cuchademadera">
-            <div class="card-body">
-                <h5 class="card-title">Cucha Safari</h5>
-                <p class="card-text"> Están construidas con estructura de madera dura, 2x1 pulgadas, atornillada en
-                    todas sus uniones, revestida en su totalidad en machimbre de primera calidad.</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
-            </div>
-        </div>
-        <div class="card" style="width: 18rem;">
-            <img src="../assets/imag/cucha4.jpg" class="card-img-top" alt="cuchabubble">
-            <div class="card-body">
-                <h5 class="card-title">Cucha Bubble</h5>
-                <p class="card-text"> Esfera realizada con polietileno de alta densidad, resistente al impacto y con
-                    protección UV que permite que los colores permanezcan inalterables con el paso del tiempo</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
-            </div>
-        </div>
-    </div>
     </main>
     <!-- Fin de imagenes de productos -->
     <!-- Inicio de footer -->
@@ -157,20 +164,14 @@
                 <h4>Redes Sociales</h4>
                 <ul class="mt-4 list unstyled">
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
+                        <p><i class="fab fa-facebook-f"></i></p>
                     </li>
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-instagram"></i>
-                        </a>
+                        <p><i class="fab fa-instagram"></i></p>
                     </li>
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-twitter"></i>
-
-                        </a>
+                        <p><i class="fab fa-twitter"></i></p>
+                        
                     </li>
                 </ul>
             </div>
@@ -178,27 +179,20 @@
                 <h4>Medios de pago</h4>
                 <ul class="mt-4 list unstyled">
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-cc-visa"></i>
-                        </a>
+                        <p><i class="fab fa-cc-visa"></i></p>
                     </li>
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-cc-mastercard"></i>
-                        </a>
+                        <p><i class="fab fa-cc-mastercard"></i></p>
 
                     </li>
 
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-cc-amex"></i>
-                        </a>
+                        <p><i class="fab fa-cc-amex"></i></p>
+                            
                     </li>
 
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-cc-paypal"></i>
-                        </a>
+                        <p><i class="fab fa-cc-paypal"></i></p>
                     </li>
                 </ul>
             </div>
