--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,16 +1,13 @@
 @mixin altoAncho($height, $width) {
     height: $height;
     width: $width;
-    
+
 }
-
-
-
 
 /* mixin portada index */
 
-@mixin flex ($dis,$flex-direction, $flex-wrap,$align-content , $justify, $align) { 
-    
+@mixin flex ($dis, $flex-direction, $flex-wrap, $align-content, $justify, $align) {
+
     display: $dis;
     flex-direction: $flex-direction;
     flex-wrap: $flex-wrap;
@@ -18,8 +15,49 @@
     justify-content: $justify;
     align-items: $align;
 }
+
 /*  fin mixin portada index  */
 
+/* inicio mixin footer_flex */
+@mixin footer_flex ($dis, $justify) {
+    display: $dis;
+    justify-content: $justify;
+    font-size: 0.8rem;
+
+}
+
+/* fin mixin footer_flex */
+/* inicio mixin flex productos */
+@mixin alimentosflex($dis, $align-content, $justify, $align-items, $direction) {
+    display: $dis;
+    align-content: $align-content;
+    justify-content: $justify;
+    align-items: $align-items;
+    flex-direction: $direction;
+}
+
+/* fin mixin flex productos */
+
+/* inicio mixin flex contacto */
+@mixin contactoflex ($dis, $direction, $wrap, $align-content, $align-items, $justify) {
+    display: $dis;
+    flex-direction: $direction;
+    flex-wrap: $wrap;
+    align-content: $align-content;
+    align-items: $align-items;
+    justify-content: $justify;
+}
 
 
+/* fin mixin flex contacto */
 
+
+/* inicio mixin footer_flex vista mobile */
+
+@mixin footermobile($dis, $justify, $flex-wrap, $direction, $align) {
+    display: $dis;
+    justify-content: $justify;
+    flex-wrap: $flex-wrap;
+    flex-direction: $direction;
+    align-items: $align;
+}
