--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -7,40 +7,46 @@
     align-content: space-between;
     justify-content: space-between;
     align-items: stretch;
-    
+
 }
 
 .peluqueria {
-    grid-area:1 / 1 / 2 / 2;
-    padding: 2cm;
-    border: 1cm;
+    grid-area: 1 / 1 / 2 / 2;
+    padding: 30px;
+    border: 20px;
+    padding-bottom: 1px;
 
 }
 
 .imgpeluqueria {
-    grid-area: 1 / 2 / 2 / 3; 
-    border: 1cm;
-    padding: 2cm;
-    
+    grid-area: 1 / 2 / 2 / 3;
+    border: 20px;
+    padding: 30px;
+    padding-bottom: 1px;
+
+
 }
 
 .veterinaria {
     grid-area: 2 / 1 / 3 / 2;
-    padding: 2cm;
+    padding: 30px;
+    border: 20px;
     padding-bottom: 300px;
-    padding-top: 60px;
+    padding-top: 10px;
 
 }
 
 .imgveterinaria {
     grid-area: 2 / 2 / 3 / 3;
     padding-bottom: 300px;
-    padding-top: 60px;
-    padding: 2cm;
-    
+    padding-top: 10px;
+    padding: 30px;
+    border: 20px;
+
 }
- /* inicio @media servicios */
- .gradiente {
+
+/* inicio @media servicios */
+.gradiente {
     background-image: linear-gradient(rgb(32, 32, 15), rgb(214, 219, 54));
 }
 
