--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,6 +1,5 @@
 @import "variables";
 @import "mixins";
-@import "extend";
 @import "nosotros";
 @import "productos";
 @import "servicios";
@@ -13,12 +12,12 @@
 }
 
 body {
-    background-color: map-get($map: $palette, $key:"primary" );
+    background-color: map-get($map: $palette, $key:"primary");
 }
 
 /* inicio header canario */
 header {
-    background-color: map-get($map:$palette , $key: "secondary" );
+    background-color: map-get($map:$palette, $key: "secondary");
 }
 
 
@@ -35,34 +34,27 @@ header h2 {
     margin-bottom: 0.2rem;
 }
 
-.logo__flex {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    justify-content: flex-start;
-    align-items: flex-start;
-}
-
 .carrito {
     font-size: 200%;
 }
 
-header img  {
-    @include altoAncho(70px,100px);
+header img {
+    @include altoAncho(70px, 100px);
     margin: 0 0 0 20px;
 }
+
 /* fin header canario */
 
 /* inicio portada index */
 .carousel-inner {
     height: 700px;
 }
+
 /* mixin portada */
 .contenedor__flex {
-    @include flex (flex,column,nowrap,center,center,center)
-    
+    @include flex (flex, column, nowrap, center, center, center)
 }
+
 /* fin mixin portada */
 .tituloportada {
     text-align: center;
@@ -100,51 +92,28 @@ main .portadaText {
     text-align: center;
     background-color: rgb(246, 246, 118);
     font-size: medium;
-    padding-bottom: 200px;
     padding-top: 30px;
     height: 0%;
-         p{
-            margin: 2px;
-            padding: 20px; 
-         }
+    padding-bottom: 200px;
+
+    p {
+        margin: 20px;
+        padding: 5px;
+        border: 15px;
+    }
 
 }
 
 /* fin texto de portada index */
-/* animacion titulos */
+/* extend animacion titulos */
 .animacion_titulos {
+    @extend .tituloportada;
     text-align: left;
-    color: grey;
     padding: 1cm;
     height: 1cm;
-    /* nombre */
-    animation-name: efecto;
-    /* veces que se ejecuta */
-    animation-iteration-count: infinite;
-    /* duracion */
-    animation-duration: 4s;
-    /* tiempo que demora hasta que carga */
-    animation-delay: 1s;
 }
 
-@keyframes efecto {
-    0% {
-        color: gray;
-    }
-
-    50% {
-        color: white;
-    }
-
-    75% {
-        color: black;
-    }
-
-    100% {
-        color: gray;
-    }
-}
-/* fin animacion titulos */
+/* extend animacion titulos */
 /* inicio de footer */
 footer {
     color: white;
@@ -156,14 +125,14 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-   
+
 
     ul {
         li {
             font-size: 1.5rem;
             text-align: center;
 
-            a {
+            p {
                 color: white;
             }
         }
@@ -175,7 +144,7 @@ footer {
 
         p {
             font-size: 1.5rem;
-            
+
         }
     }
 
@@ -183,8 +152,7 @@ footer {
 }
 
 .footer__flex {
-    display: flex;
-    justify-content: space-around;
+    @include footer_flex (flex, space-around);
     font-size: 0.8rem;
 }
 
@@ -194,156 +162,3 @@ footer {
 }
 
 /* fin de footer */
-/* inicio vista mobile index */
-@media only screen and (max-width: 420px) {
-
-    /* inicio @media index */
-    body {
-        background-color: map-get($map: $palette, $key:"primary" );
-        height: 1000px;
-
-    }
-
-    header h1 {
-        font-family: 'Nanum Pen Script', cursive;
-        color: rgb(238, 238, 27);
-        font-size: 40px;
-        padding-top: 0%;
-    }
-    
-    header h2 {
-        font-family: 'Times New Roman', Times, serif;
-        color: rgb(115, 115, 115);
-        margin-bottom: 0.2rem;
-    }
-
-    .carousel-inner {
-        height: 300px;
-        width:500px ;
-    }
-
-    .contenedor__flex {
-        @include flex (flex,column,nowrap,center,center,center)
-        
-    }
-    /* fin mixin portada */
-    .tituloportada {
-        text-align: center;
-        color: grey;
-        font-size: 30px;
-         /* nombre */
-    animation-name: efecto;
-    /* veces que se ejecuta */
-    animation-iteration-count: infinite;
-    /* duracion */
-    animation-duration: 4s;
-    /* tiempo que demora hasta que carga */
-    animation-delay: 1s;
-}
-
-@keyframes efecto {
-    0% {
-        color: gray;
-    }
-
-    50% {
-        color: white;
-    }
-
-    75% {
-        color: black;
-    }
-
-    100% {
-        color: gray;
-    }
-}
-
-    main .portadaText p {
-        text-align: center;
-        background-color: rgb(246, 246, 118);
-        font-size: medium;
-        padding-bottom: 30px;
-        padding-top: 40px;
-        height: 0%
-    }
-
-    /* fin de index */
-    /* inicio @media footer */
-    footer {
-        color: white;
-        line-height: 4px;
-        background-image: url("../assets/imag/gray.jpg");
-        background-color: grey;
-        background-repeat: no-repeat;
-        background-size: cover;
-        bottom: 0;
-        width: 100%;
-        font-size: 2px;
-        position: relative;
-
-    }
-
-    .bi-whatsapp:before {
-        font-size: 1rem;
-    }
-
-    .bi-geo-alt::before {
-        font-size: 1rem;
-    }
-
-    .bi-envelope::before {
-        font-size: 1rem;
-    }
-
-    .fa-facebook-f:before {
-        font-size: 1rem;
-        color: white;
-    }
-
-    .fa-instagram:before {
-        font-size: 1rem;
-        color: white;
-    }
-
-    .fa-twitter:before {
-        font-size: 1rem;
-        color: white;
-    }
-
-    .fa-cc-visa:before {
-        font-size: 1rem;
-        color: white;
-    }
-
-    .fa-cc-mastercard::before {
-        font-size: 1rem;
-        color: white;
-    }
-
-    .fa-cc-amex:before {
-        font-size: 1rem;
-        color: white;
-    }
-
-    .fa-cc-paypal:before {
-        font-size: 1rem;
-        color: white;
-    }
-
-    .footer__flex {
-        display: flex;
-    justify-content: space-evenly;
-    font-size: 0.3rem;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: stretch;
-    }
-
-    .footer__creditos {
-        font-size: 0.3rem;
-        text-align: center;
-    }
-
-    /* fin @media footer */
-}
