--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -13,8 +13,8 @@
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Canario Pet Shop-Nosotros</title>
 </head>
@@ -28,9 +28,8 @@
             </div>
         </div>
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -85,20 +84,13 @@
                 <h4>Redes Sociales</h4>
                 <ul class="mt-4 list unstyled">
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
+                        <p><i class="fab fa-facebook-f"></i></p>
                     </li>
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-instagram"></i>
-                        </a>
+                        <p><i class="fab fa-instagram"></i></p>
                     </li>
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-twitter"></i>
-
-                        </a>
+                        <p><i class="fab fa-twitter"></i></p> 
                     </li>
                 </ul>
             </div>
@@ -106,27 +98,19 @@
                 <h4>Medios de pago</h4>
                 <ul class="mt-4 list unstyled">
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-cc-visa"></i>
-                        </a>
+                        <p><i class="fab fa-cc-visa"></i></p>
                     </li>
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-cc-mastercard"></i>
-                        </a>
-
+                        <p><i class="fab fa-cc-mastercard"></i></p>
                     </li>
 
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-cc-amex"></i>
-                        </a>
+                        <p><i class="fab fa-cc-amex"></i></p>
+                            
                     </li>
 
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-cc-paypal"></i>
-                        </a>
+                        <p><i class="fab fa-cc-paypal"></i></p>
                     </li>
                 </ul>
             </div>
