--- a/views/servicios.html
+++ b/views/servicios.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="petshop cordoba,mascotas, alimentos para mascotas">
-    <meta name="description" content="Servicios de peluqueria y veterinaria">
+    <meta name="description" content="Servicios de peluquería y veterinaria.">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
     <link rel="shortcut icon" href="../assets/imag/logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Canario Pet Shop-Servicios</title>
 
@@ -59,10 +59,12 @@
             <div class="peluqueria">
                 <h3>Peluqueria</h3>
                 <p>Ofrecemos todos los servicios de peluquería e higiene para mascotas:
-                     baños, limpieza de oídos y glándulas, corte de uñas, cliperwork, limpieza de plantares, entre otros.
+                    baños, limpieza de oídos y glándulas, corte de uñas, cliperwork, limpieza de plantares, entre otros.
                 </p>
                 <p>
-                    El cuidado del pelo de tu mascota es esencial para mantenerla linda y saludable. En Canario ofrecemos baños, cortes y peinados que combinan estos dos aspectos fundamentales para el bienestar de tu mascota.
+                    El cuidado del pelo de tu mascota es esencial para mantenerla linda y saludable. En Canario
+                    ofrecemos baños, cortes y peinados que combinan estos dos aspectos fundamentales para el bienestar
+                    de tu mascota.
                 </p>
             </div>
             <div class="imgpeluqueria">
@@ -112,20 +114,13 @@
                 <h4>Redes Sociales</h4>
                 <ul class="mt-4 list unstyled">
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
+                        <p><i class="fab fa-facebook-f"></i></p>
                     </li>
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-instagram"></i>
-                        </a>
+                        <p><i class="fab fa-instagram"></i></p>
                     </li>
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-twitter"></i>
-
-                        </a>
+                        <p><i class="fab fa-twitter"></i></p> 
                     </li>
                 </ul>
             </div>
@@ -133,27 +128,18 @@
                 <h4>Medios de pago</h4>
                 <ul class="mt-4 list unstyled">
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-cc-visa"></i>
-                        </a>
+                        <p><i class="fab fa-cc-visa"></i></p>
                     </li>
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-cc-mastercard"></i>
-                        </a>
-
+                        <p><i class="fab fa-cc-mastercard"></i></p>
                     </li>
 
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-cc-amex"></i>
-                        </a>
+                        <p><i class="fab fa-cc-amex"></i></p>
                     </li>
 
                     <li class="list-inline-item">
-                        <a href="">
-                            <i class="fab fa-cc-paypal"></i>
-                        </a>
+                        <p><i class="fab fa-cc-paypal"></i></p> 
                     </li>
                 </ul>
             </div>
